--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,22 @@ spring.jpa.hibernate.ddl-auto = create
 ### spring.jpa.hibernate.ddl.auto=update ?? ??? ??? ???? ??[????]
 spring.jpa.hibernate.ddl.auto=update
 # 3-2 ??? sql? console? ????
-spring.jpa.properties.hibernate.show_sql =true
+spring.jpa.properties.hibernate.show_sql=true
 # 3-3 ??? sql? console? sql ???? ??
-spring.jpa.properties.hibernate.format_sql = =true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
+
+# ?? ??? 221116
+# spring mail sender
+spring.mail.host=smtp.naver.com
+spring.mail.port=587
+spring.mail.username=ajdksgd
+spring.mail.password=tnz2cv
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls = true
+
+
+
+
