--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test' // 스프링부트 테스트 라이브러리
     runtimeOnly 'com.mysql:mysql-connector-j' // mysql
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // 스프링데이터
+    implementation 'org.springframework.boot:spring-boot-starter-mail' // 메일
 
 }
 
