--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.password=1234
 ### spring.jpa.hibernate.ddl-auto = create ?? ??? DB ???
 #spring.jpa.hibernate.ddl-auto = create
 ### spring.jpa.hibernate.ddl.auto=update ?? ??? ??? ???? ??[????]
- spring.jpa.hibernate.ddl.auto=update
+ #spring.jpa.hibernate.ddl.auto=update
 # 3-2 ??? sql? console? ????
 spring.jpa.properties.hibernate.show_sql=true
 # 3-3 ??? sql? console? sql ???? ??
