--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j' // mysql
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // 스프링데이터
     implementation 'org.springframework.boot:spring-boot-starter-mail' // 메일
+    implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티 [인증 / 인가 ]
 
 }
 
