--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // 스프링데이터
     implementation 'org.springframework.boot:spring-boot-starter-mail' // 메일
     implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티 [인증 / 인가 ]
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // OAuth2 [ SNS 로그인 ]
 
 }
 
