--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,55 @@ spring.mail.password=tnz2cv
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls = true
 
+################################################################################################################################################################
+
+# ouath2 kokoo
+# spring.security.oauth2.client.registration.kakao.client-id=REST API key
+# spring.security.oauth2.client.registration.kakao.client-secret=Client Secret code
+# spring.security.oauth2.client.registration.kakao.scope=????
+
+spring.security.oauth2.client.registration.kakao.client-id =7dc37d88ec2a5f582f8261fb80980d3c
+spring.security.oauth2.client.registration.kakao.client-secret =LhSZMFn6kNK2DGxpFCtOO9Y9dQpLStkI
+spring.security.oauth2.client.registration.kakao.scope = profile_nickname , account_email
+
+spring.security.oauth2.client.registration.kakao.redirect-uri = {baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.kakao.client-name = kakao
+spring.security.oauth2.client.registration.kakao.client-authentication-method = post
+
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri = https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri = https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute = kakao_account
 
 
 
+
+# ouath2 naver
+# spring.security.oauth2.client.registration.kakao.client-id=REST API key
+# spring.security.oauth2.client.registration.kakao.client-secret=Client Secret code
+# spring.security.oauth2.client.registration.kakao.scope=????
+
+spring.security.oauth2.client.registration.naver.client-id =WzRSPY2Y79RNBI_zA_83
+spring.security.oauth2.client.registration.naver.client-secret =A9CC1Tyje_
+spring.security.oauth2.client.registration.naver.scope = nickname , email
+
+spring.security.oauth2.client.registration.naver.redirect-uri = {baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type = authorization_code
+spring.security.oauth2.client.registration.naver.client-name =naver
+# ???? post ?? ??? ??
+# spring.security.oauth2.client.registration.naver.client-authentication-method = post
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+
+# ouath2 google
+spring.security.oauth2.client.registration.google.client-id=183777080245-u2i8rihbk29j21h8i34dgd7fm6fusd74.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope = email , profile
+
+
+################################################################################################################################################################
