--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.3.2",
+    "@ckeditor/ckeditor5-react": "^5.0.3",
     "@nivo/core": "^0.80.0",
     "@nivo/radar": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
